# external-sorting

./: .gitignore  CMakeLists.txt  README.md  gen.cpp  main.cpp
src/: sorter.cpp  sorter.hpp
